# shea

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
pyl/: __init__.py  __main__.py  _version.py  main.py
qwe/: __init__.py  __main__.py  _version.py  main.py
shea/: __init__.py  __main__.py  _version.py  main.py  pydisk.py  pytop.py
tests/: test_basic.py
