[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "shea"
dynamic = ["version"]
description = "A simple Python directory lister with optional tree view"
readme = "README.md"
requires-python = ">=3.8"
authors = [ { name = "Martin Thoma", email = "info@martin-thoma.de" } ]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/MartinThoma/shea"

[project.scripts]
pyls = "shea.pyls:main"

[tool.ruff]
# Python version and general formatting parameters
target-version = "py38"
line-length = 100
src = ["shea", "tests"]
exclude = [
  ".venv",
  "build",
  "dist",
  ".git",
  "__pycache__",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D211",  # one-blank-line-before-class
    "D212",  # multi-line-summary-first-line
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN001", "D100"]
"pyls.py" = ["T201"]
